feat: Adding scripts for data inspection and processing

--- a/notebooks/build_pipeline.ipynb
+++ b/notebooks/build_pipeline.ipynb
@@ -36,8 +36,8 @@
     "# SAS02 - Total Population (1981 Census)\n",
     "import pandas as pd\n",
     "\n",
-    "base = \"https://raw.githubusercontent.com/jourdee-lab/manchester-spatial-analysis-data-lab/1e2a6499d4f7997c50b0a150b60d7ab3e8857fde/data/raw/census_1981/sas02_total_population\"\n",
-    "files = [f\"{base}/81sas02ews_{i}.csv\" for i in range(5)]\n",
+    "base = \"D:\\Workspace\\Data_Pending\\s02ews\"\n",
+    "files = [f\"{base}/s02ews{i}.csv\" for i in range(4)]\n",
     "\n",
     "dfs = [pd.read_csv(url, dtype={\"zoneid\": \"string\"}) for url in files]\n",
     "sas02_1981 = pd.concat(dfs, ignore_index=True)\n",
@@ -70,9 +70,17 @@
     "print(\"\\n=== Manchester City (1981) - SAS02 All Residents ===\")\n",
     "print(manchester_agg)\n",
     "\n",
-    "manchester_agg.to_csv(\"manchester_sas02_1981.csv\", index=False)\n",
-    "print(\"\\nFull aggregate saved to: manchester_sas02_1981.csv\")"
+    "manchester_agg.to_csv(\"1991_sas02_totalpop_combined.csv\", index=False)\n",
+    "print(\"\\nFull aggregate saved to:1991_sas02_totalpop_combined.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a52fb01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
